--- a/.github/workflows/deploy-cafe.yml
+++ b/.github/workflows/deploy-cafe.yml
@@ -14,4 +14,9 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Deploy to S3
         run: |
-          aws s3 sync . s3://cafe-website-83506
+          aws s3 sync . s3://test-devoops-bucket 
+      - name: Update objects from distribution
+        run: |
+          aws cloudfront create-invalidation \
+            --distribution-id ${{ secrets.DISTRIBUTION_ID }} \
+            --paths "/*"
